<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:minWidth="1000dp"
    android:orientation="vertical" >

    <TextView
        style="@style/dark_section_label"
        android:text="@string/name_label" />

    <EditText
        android:id="@+id/name"
        style="@style/input_field" />

    <TextView
        style="@style/dark_section_label"
        android:text="@string/address_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/address_loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxHeight="40dp"
            android:maxWidth="40dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/address"
            style="@style/input_field" />
    </LinearLayout>

    <TextView
        style="@style/dark_section_label"
        android:text="@string/color_label" />

    <TextView
        android:id="@+id/color"
        style="@style/dark_section_label"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/accept"
        style="@style/screen_button"
        android:text="@string/accept" />

</LinearLayout>