<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/dark_section_label"
            android:text="@string/name_label" />

        <TextView
            android:id="@+id/name"
            style="@style/input_field" />

        <TextView
            style="@style/dark_section_label"
            android:text="@string/address_label" />

        <TextView
            android:id="@+id/address"
            style="@style/input_field" />

        <include layout="@layout/event_category_section" />

        <TextView
            style="@style/dark_section_label"
            android:text="@string/description_label" />

        <TextView
            android:id="@+id/description"
            style="@style/input_field" />
    </LinearLayout>

</ScrollView>