<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/dark_section_label"
        android:text="@string/graphic_section" />

    <LinearLayout style="@style/options_subsection" >

        <TextView
            style="@style/subsection_label"
            android:layout_gravity="center"
            android:text="@string/current_location_color" />

        <TextView
            android:id="@+id/current_location_color_picker"
            style="@style/subsection_label"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout style="@style/options_subsection" >

        <TextView
            style="@style/subsection_label"
            android:layout_gravity="center"
            android:text="@string/favorite_locations_color" />

        <TextView
            android:id="@+id/favorite_locations_color_picker"
            style="@style/subsection_label"
            android:layout_gravity="center" />
        
    </LinearLayout>
</LinearLayout>