<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/dark_section_label"
        android:text="@string/server_section" />

    <LinearLayout style="@style/options_subsection" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                style="@style/subsection_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/register_status" />

            <TextView
                android:id="@+id/register_status"
                style="@style/subsection_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/register_button"
            style="@style/screen_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/register" />
    </LinearLayout>
    
    <LinearLayout style="@style/options_subsection" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                style="@style/subsection_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/event_categories_status" />

            <TextView
                android:id="@+id/event_categories_status"
                style="@style/subsection_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/download_event_categories_button"
            style="@style/screen_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/download" />
    </LinearLayout>

</LinearLayout>